k8s/gateway/03-httproute-bankapp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bankapp-httproute
  namespace: bankapp
spec:
  parentRefs:
  - name: bankapp-gateway
    namespace: gateway-system
  hostnames:
  - "bankapp.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: bankapp
      port: 8080
