k8s/gateway/03-httproute-demoapp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demoapp-httproute
  namespace: demo-ns
spec:
  parentRefs:
  - name: sample-gateway
    namespace: gateway-system
  hostnames:
  - "demoapp.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: demoapp-svc
      port: 8080
