k8s/gateway/04-httproute-demoapp-path-split.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demoapp-path-routing
  namespace: demo-ns
spec:
  parentRefs:
  - name: sample-gateway
    namespace: gateway-system
  hostnames:
  - "demoapp.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: demo-api-svc
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: demo-web-svc
      port: 80
